# django-calingen

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-default.yml  ci-release.yml  wip_tex.yml
calingen/: __init__.py  admin.py  apps.py  blubb.py  checks.py  constants.py  exceptions.py  settings.py  urls.py
calingen/contrib/: __init__.py
calingen/contrib/compiler/: __init__.py
calingen/contrib/compiler/copy_paste/: __init__.py  compiler.py
calingen/contrib/compiler/download/: __init__.py  compiler.py
calingen/contrib/compiler/html_or_download/: __init__.py  compiler.py
calingen/contrib/compiler/noop/: __init__.py  compiler.py
calingen/contrib/compilers/: __init__.py
calingen/contrib/compilers/copy_paste/: __init__.py  compiler.py
calingen/contrib/compilers/download/: __init__.py  compiler.py
calingen/contrib/compilers/html_or_download/: __init__.py  compiler.py
calingen/contrib/holidays/: __init__.py
calingen/contrib/holidays/germany/: __init__.py  provider.py
calingen/contrib/layouts/: __init__.py
calingen/contrib/layouts/lineatur/: __init__.py  apps.py  lineatur.py
calingen/contrib/layouts/lineatur/static/lineatur/: lineatur_base.css
calingen/contrib/layouts/lineatur/templates/lineatur/: base.html  config_form.html  form_field_group.html  layout.html
calingen/contrib/layouts/simple_event_list/: __init__.py  apps.py  simple_event_list.py
calingen/contrib/layouts/simple_event_list/templates/simple_event_list/tex/: base.tex  simple_event_list.tex  single_entry_line.tex
calingen/contrib/layouts/year_by_week/: __init__.py  apps.py  year_by_week.py
calingen/contrib/layouts/year_by_week/templates/year_by_week/tex/: base.tex  year_by_week.tex
calingen/contrib/providers/: __init__.py
calingen/contrib/providers/german_holidays/: __init__.py  apps.py  provider.py
calingen/forms/: __init__.py  baseforms.py  fields.py  generation.py  generic.py  tex.py  widgets.py
calingen/forms/fields/: __init__.py  datetime.py  fields.py  json.py  plugin.py
calingen/interfaces/: __init__.py  data_exchange.py  plugin_api.py
calingen/locale/de/LC_MESSAGES/: django.po
calingen/locale/en/LC_MESSAGES/: django.po
calingen/migrations/: 0001_initial.py  0002_alter_event_unique_together.py  0002_auto_20211202_0514.py  0002_rename_event_provider_profile__event_provider.py  0003_alter_event_type.py  0004_alter_event_owner.py
calingen/models/: __init__.py  event.py  profile.py  queryset.py
calingen/templates/calingen/: app_base.html  calendar_entry_list_year.html  calender_entry_list_year.html  event_confirm_delete.html  event_create.html  event_detail.html  event_form.html  event_list.html  event_update.html  layout_configuration.html  layout_selection.html  profile_confirm_delete.html  profile_create.html  profile_detail.html  profile_update.html  tex_layout_configuration.html  tex_layout_selection.html
calingen/templates/calingen/contrib/: compiler_copypaste.html
calingen/templates/calingen/includes/: form.html
calingen/templatetags/: __init__.py  calingen_escape.py  calingen_tex.py
calingen/views/: __init__.py  base.py  event.py  generation.py  generic.py  mixins.py  profile.py  tex.py  web.py
docs/: Makefile
docs/source/: admin-doc.rst  conf.py  index.rst  user-doc.rst
docs/source/cookbook/: index.rst  ingredients.rst  modify_templates.rst  setup_step_by_step.rst  sharing_events.rst
docs/source/developer/: app_internals.rst  coding_style.rst  development_setup.rst  git_branching_model.rst  index.rst  plugin_api.rst  release_checklist.rst
docs/source/includes/: ci-matrix.rst.txt  event_crud.dot  layout_process.dot  permission_system.dot  templates_table.rst.txt  workflow_ci-default.dot
docs/source/includes/ingredients/: compilers.rst.txt  eventprovider.rst.txt  events.rst.txt  ingredients.dot  layouts.rst.txt  plugin_api.rst.txt
requirements/: ci-full.txt  common.txt  coverage.txt  coveralls.txt  documentation.txt  tox.txt  util.txt
tests/: __init__.py  runtests.py  test_blubb.py  test_checks.py  test_layout_compilation.py
tests/forms/: test_fields.py  test_widgets.py
tests/interfaces/: test_data_exchange.py  test_plugin_api.py
tests/models/: test_event.py  test_profile.py
tests/templatetags/: test_calingen_escape.py  test_calingen_tex.py
tests/util/: __init__.py  settings_dev.py  settings_test.py  testcases.py  urls_dev.py
tests/util/fixtures/: test_data.json
tests/util/templates/registration/: login.html
tests/views/: test_base.py  test_generation.py  test_mixins.py  test_profile.py  test_tex.py
